--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,13 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.+'
+    //compile 'com.android.support:v4.app.Fragment'
+    //compile 'com.android.support:v4.app.FragmentManager'
+    //compile 'com.android.support:v4.app.FragmentTransaction'
+
+
+
+
+
     testCompile 'junit:junit:4.12'
 }
